// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Insider's productViewedEvent destination action: all fields 1`] = `
Object {
  "users": Array [
    Object {
      "attributes": Object {
        "age": 45361280067829.76,
        "app_version": "y$Fq1#L9R1N]w7PGv",
        "birthday": "y$Fq1#L9R1N]w7PGv",
        "carrier": "y$Fq1#L9R1N]w7PGv",
        "city": "y$Fq1#L9R1N]w7PGv",
        "country": "y$Fq1#L9R1N]w7PGv",
        "custom": Object {},
        "email": "nubtaw@pise.in",
        "gender": "y$Fq1#L9R1N]w7PGv",
        "idfa": "y$Fq1#L9R1N]w7PGv",
        "last_ip": "y$Fq1#L9R1N]w7PGv",
        "locale": "y$Fq1#L9R1N]w7PGv",
        "model": "y$Fq1#L9R1N]w7PGv",
        "name": "y$Fq1#L9R1N]w7PGv",
        "os_version": "y$Fq1#L9R1N]w7PGv",
        "phone": "y$Fq1#L9R1N]w7PGv",
        "platform": "y$Fq1#L9R1N]w7PGv",
        "surname": "y$Fq1#L9R1N]w7PGv",
        "timezone": "y$Fq1#L9R1N]w7PGv",
      },
      "events": Array [
        Object {
          "event_name": "product_detail_page_view",
          "event_params": Object {
            "currency": "LRD",
            "custom": Object {},
            "name": "y$Fq1#L9R1N]w7PGv",
            "product_id": "y$Fq1#L9R1N]w7PGv",
            "product_image_url": "y$Fq1#L9R1N]w7PGv",
            "quantity": 4536128006782976,
            "referrer": "y$Fq1#L9R1N]w7PGv",
            "taxonomy": Array [
              "y$Fq1#L9R1N]w7PGv",
            ],
            "unit_price": 45361280067829.76,
            "unit_sale_price": 45361280067829.76,
            "url": "y$Fq1#L9R1N]w7PGv",
          },
          "timestamp": "2021-02-01T00:00:00.000Z",
        },
      ],
      "identifiers": Object {
        "custom": Object {
          "segment_anonymous_id": "y$Fq1#L9R1N]w7PGv",
        },
        "uuid": "y$Fq1#L9R1N]w7PGv",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Insider's productViewedEvent destination action: required fields 1`] = `
Object {
  "users": Array [
    Object {
      "attributes": Object {
        "custom": Object {},
      },
      "events": Array [
        Object {
          "event_name": "product_detail_page_view",
          "event_params": Object {
            "custom": Object {},
          },
          "timestamp": "2021-02-01T00:00:00.000Z",
        },
      ],
      "identifiers": Object {
        "custom": Object {
          "segment_anonymous_id": "y$Fq1#L9R1N]w7PGv",
        },
        "uuid": "y$Fq1#L9R1N]w7PGv",
      },
    },
  ],
}
`;
